fixed style details: spacing of subfolder list
svn path=/ZMS/branches/zms_bs3/; revision=2391

--- a/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -267,6 +267,7 @@ ul.zmi-container .zmi-item .center .contentEditable {
 	border-right:none !important;
 	border-bottom:none !important;
 	border-top:1px dotted #ccc !important;
+	padding-top:0.2em;
 }
 ul.zmi-container .zmi-item.pageelement .center > * {
 	padding-left:.8em;
